--- a/report.yml
+++ b/report.yml
@@ -4,8 +4,8 @@ city: New York
 is_student: true
 grade:
   - subject: Math
-    grade: F
+    grade: grade
   - subject: English
-    grade: F
+    grade: G
   - subject: Science
-    grade: F+
+    grade: G+
